<resources>
    <!--App-->
    <string name="app_name">RoomJetpackCompose</string>
    <string name="finwise">FinWise</string>
    <string name="lorem_ipsum">"Lorem ipsum dolor sit amet, consectetur\nadipiscing elit, sed do eiusmod. "</string>
    <string name="db_name">todos_db</string>
    <!--Screen Names-->
    <string name="todo_list_screen_name">"Todo List"</string>
    <string name="todo_details_screen_name">"Todo Details"</string>
    <!--Texts-->
    <string name="empty_todo_list_text">"The todo list is empty."</string>
    <string name="insert_todo">"Insert todo"</string>
    <!--Buttons-->
    <string name="insert_button">"Insert"</string>
    <string name="update_button">"Update"</string>
    <string name="cancel_button">"Cancel"</string>
    <!--Icons-->
    <string name="edit_icon">"Edit"</string>
    <string name="delete_icon">Delete</string>
    <!--Content Descriptions-->
    <string name="open_insert_todo_dialog">"Open insert todo dialog."</string>
    <string name="navigate_back">Navigate back</string>
    <!--Notification-->
    <string name="notification_title">Notification</string>
    <string name="today_section_title">Today</string>
    <string name="yesterday_section_title">Yesterday</string>
    <string name="thisweekend_section_title">This Weekend</string>
    <!-- Notification details -->
    <string name="notif_reminder_title">Reminder!</string>
    <string name="notif_reminder_message">Set up your automatic savings to meet your savings goal...</string>
    <string name="notif_new_update_title">New Update</string>
    <string name="notif_transactions_title">Transactions</string>
    <string name="notif_transactions_message">A new transaction has been registered</string>
    <string name="notif_budget_message">Groceries | pantry | -$100,00</string>
    <string name="notif_budget_message2">Food |  Dinner  |  -$70,40</string>
    <string name="notif_expense_title">Expense record</string>
    <string name="notif_expense_message">We recommend that you be more attentive to your finances.</string>
    <string name="notification_time_example">17:00 - April 24</string>
    <!--Placeholders-->
    <string name="todo_name">"Type a todo name…"</string>
    <string name="todo_description">"Type a todo description…"</string>
    <!--Messages-->
    <string name="empty_todo_field_message">"Todo %1$s cannot be empty."</string>
    <string name="no_todo_updates_message">"No todo updates performed."</string>
    <string name="todo_action_message">"Todo successfully %1$s."</string>
    <!--Testing-->
    <string name="name_test">"Name Test"</string>
    <string name="description_test">"Description Test"</string>
    <string name="new_name_test">"New Name Test"</string>
    <string name="login_error">Login error</string>
    <string name="ok">OK</string>
    <string name="welcome">Welcome</string>
    <string name="coded_password_placeholder">● ● ● ● ● ● ● ●</string>
    <string name="coded_password_code">●</string>
    <string name="username_or_email">Username Or Email</string>
    <string name="example_example_com">example@example.com</string>
    <string name="password">Password</string>
    <string name="password_placeholder">password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="facebook">facebook</string>
    <string name="google">google</string>
    <string name="sign_up_caps">Sign up</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_error">Sign Up Error</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_123_456_789">+ 123 456 789</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="dd_mm_yyy">DD / MM /YYY</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="by_continuing_you_agree_to">"By continuing, you agree to "</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="and">" and "</string>
    <string name="privacy_policy">Privacy Policy.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_2">Log in</string>
    <!-- Onboarding titles -->
    <string name="onboarding_title_a">Welcome To\nExpense Manager</string>
    <string name="onboarding_title_b">¿Are You Ready To\nTake Control Of\nYour Finances?</string>
    <string name="next_text">Next</string>
    <string name="hi_welcome_back">Hi, Welcome Back</string>
    <string name="good_morning">Good Morning</string>
    <string name="total_balance">Total Balance</string>
    <string name="total_expense">Total Expense</string>
    <string name="expense_percentage">%d%% Of Your Expenses, Looks Good.</string>
    <string name="see_all">See all</string>
    <string name="revenue_last_week">Revenue Last Week</string>
    <string name="_4_000_00">$4.000.00</string>
    <string name="food_last_week">Food Last Week</string>
    <string name="_100_00">-$100.00</string>
    <string name="account_balance">Account Balance</string>
    <string name="transactions">Transactions</string>
    <string name="october">October</string>
    <string name="reset_password">Reset password?</string>
    <string name="lorem_ipsum_dolor">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. "</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="next_step">Next Step</string>
    <string name="security_pin">Security Pin</string>
    <string name="enter_security_pin">Enter Security Pin</string>
    <string name="accept">Accept</string>
    <string name="send_again">Send Again</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="password_has_been_changed_successfully">Password Has Been Changed Successfully</string>
    <string name="api_user">Api User</string>
    <string name="db_users">DB Users</string>
    <string name="usuario">Usuario: %1$s %2$s</string>
    <string name="ciudad">Ciudad: %1$s</string>
    <string name="error">Error: %1$s</string>
    <string name="profile">Profile</string>
    <string name="esperando_acci_n">Esperando acción…</string>
    <string name="no_hay_usuarios_agregados">No hay usuarios agregados, para crear un usuario, completar formulario de Create Account</string>
    <string name="categories">Categories</string>
    <string name="savings_on_goals">Savings\nOn Goals</string>
    <string name="no_hay_datos_disponibles">No hay datos disponibles</string>
</resources>